--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://alfarizzi27.github.io/biosaka-react",
   "name": "landingpage",
   "version": "0.1.0",
   "private": true,
@@ -9,14 +10,18 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
+    "jquery": "^3.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
